--- a/html-assignment/css/main.css
+++ b/html-assignment/css/main.css
@@ -6,7 +6,7 @@ body {
     background-color: aqua;
 }
 .site-title {
-    color: blueviolet;
+    color: rgb(53, 0, 105);
 }
 #my-image {
     box-shadow: 0px 0px 2pt 1pt black;
@@ -23,8 +23,8 @@ ul.nav {
     padding: 0;
 }
 a {
-    border: 4px solid purple;
-    background-color: coral;
+    border: 4px solid rgb(255, 107, 21);
+    background-color: rgb(255, 182, 155);
     text-decoration: none;
 }
 a:hover {
