--- a/html-assignment/css/main.css
+++ b/html-assignment/css/main.css
@@ -2,9 +2,10 @@ body {
     font-size: 18pt;
     font-family: fantasy;
 }
-.x {
-    background-color: aqua;
+header, footer {
+    background-color: rgb(45, 127, 160);
 }
+
 .site-title {
     color: rgb(53, 0, 105);
 }
@@ -17,11 +18,7 @@ ul.a {
 ul.a :nth-of-type(odd){
     background: cadetblue;
 }
-ul.nav {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
+
 a {
     border: 4px solid rgb(255, 107, 21);
     background-color: rgb(255, 182, 155);
