--- a/midterm/css/style.css
+++ b/midterm/css/style.css
@@ -49,9 +49,76 @@ table {
 	border-spacing: 0;
 }
 
-/* Main Content */
 
-bodyn{
+/* START */
+
+body {
+	font-family: Arial, Helvetica, sans-serif;
     background-color: #aad4cf;
+	margin: 0 15%;
 }
+
+.banner {
+		position: relative;
+		text-align: center;
+		color: white;
+		margin: 0%
+
+	  }
+
+.main-title {
+	font-size: 24px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+/* Navigation */
+
+.navbar {
+	display: block;
+	background-color: rgb(189, 222, 223);
+	text-align: center;	
+	width: 100%;
+}
+
+.navbar a {
+	float: left;
+	color: rgb(0, 0, 0);
+	text-decoration: none;
+	text-transform: uppercase;
+	font-size: 17px;
+	width: 33%; 
+	text-align: center;
+}
+
+.story,.contact {
+	border-left: black solid 1px;
+}
+
+.main-content {
+	background-color: rgb(189, 222, 223);
+	padding: 5%;
+}
+
+.square-image {
+	float: left;
+	width: 25%;
+}
+
+p {
+	font-size: 15px;
+}
+
+h2 {
+	font-size: 20px;
+}
+
+
+
+
+
+
+
 
