--- a/midterm/css/style.css
+++ b/midterm/css/style.css
@@ -50,7 +50,9 @@ table {
 }
 
 
-/* START */
+/* ---------------------------------------------------------
+						Banner
+-----------------------------------------------------------*/
 
 body {
 	font-family: Arial, Helvetica, sans-serif;
@@ -67,14 +69,16 @@ body {
 	  }
 
 .main-title {
-	font-size: 24px;
+	font-size: 48px;
 	position: absolute;
-	top: 50%;
+	top: 65%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
 
-/* Navigation */
+/* ---------------------------------------------------------
+						Navigation
+-----------------------------------------------------------*/
 
 .navbar {
 	display: block;
@@ -88,7 +92,7 @@ body {
 	color: rgb(0, 0, 0);
 	text-decoration: none;
 	text-transform: uppercase;
-	font-size: 17px;
+	font-size: 18px;
 	width: 33%; 
 	text-align: center;
 }
@@ -97,6 +101,10 @@ body {
 	border-left: black solid 1px;
 }
 
+/* ---------------------------------------------------------
+						Main Content
+-----------------------------------------------------------*/
+
 .main-content {
 	background-color: rgb(189, 222, 223);
 	padding: 5%;
@@ -104,16 +112,61 @@ body {
 
 .square-image {
 	float: left;
-	width: 25%;
+	width: 20%;
+	margin: 4px 10px 10px 0px
 }
-
-p {
-	font-size: 15px;
+h1 {
+	font-size: 24px;
 }
 
 h2 {
 	font-size: 20px;
+	margin-bottom: 10px;
+	margin-top: 25px;
 }
+p {
+	font-size: 14px;
+	line-height: 14px;
+}
+
+.facts {
+	margin: 10px 0 10px 12px;
+	font-size: 12px;
+	list-style-type: disc;
+}
+
+/* ---------------------------------------------------------
+						Form
+-----------------------------------------------------------*/
+.contact-section {
+	border: solid black 1px;
+	padding: 10px 14px 10px 10px;
+	margin-bottom: 10px;
+}
+
+input, textarea {
+	width: 100%;
+	margin: 10px 0 10px 0;
+}
+h4 {
+	margin: 10px 0 10px 0;
+}
+button {
+	background-color: rgb(189, 222, 223);
+	padding: 10px;
+}
+
+.container {
+	float: left;
+	position: relative;
+}
+
+footer {
+	float: right;
+}
+
+
+
 
 
 
